apps/tautulli/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  labels:
    app: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      volumes:
        - name: config
          nfs:
            path: "/k8s-volumes/persistent/tautulli/config"
            server: 192.168.1.2
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:2.13.2
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            tcpSocket:
              port: 8181
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 8181
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
