apps/tautulli/base/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  labels:
    app: tautulli
spec:
  serviceName: tautulli
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      volumes:
        - name: config
          nfs:
            path: "/mnt/NAS-T/k8s-volumes/persistent/tautulli/config"
            server: 10.10.20.10
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:v2.18.2-ls245@sha256:9e7b476ef14ae44a043b446614b5354777605eb9cb2bdbb2dbd1f99df031ac17
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          readinessProbe:
            tcpSocket:
              port: 8181
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 8181
              name: web
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
