apps/tautulli/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
spec:
  selector:
    app: tautulli
  ports:
    - name: web
      protocol: TCP
      port: 8181
      targetPort: 8181
