apps/tautulli/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli-https
spec:
  hostnames:
    - tautulli.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: nginx-fabric
      sectionName: tautulli-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: tautulli
          port: 8181
          weight: 1
