apps/tautulli/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - tautulli.nahue.ar
      secretName: tautulli
  rules:
    - host: tautulli.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tautulli-tcp
                port:
                  number: 8181
